// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RangeSlider should match snapshot 1`] = `
.c0 {
  position: relative;
  width: 100%;
  touch-action: none;
  box-sizing: border-box;
  height: calc(23px + 1px);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0.disabled {
  opacity: 0.4;
}

.c1 {
  position: absolute;
  width: 100%;
  background-color: #ebebeb;
  height: 4px;
}

<div
  className="c0 slider"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onTouchStart={[Function]}
>
  <div
    className="c1 slider__rail"
  />
  <Track
    className="slider__track"
    disabled={false}
    length={100}
    offset={0}
  />
  <Handle
    className="slider__handle slider__handle-1"
    disabled={false}
    max={100}
    min={0}
    offset={0}
    value={0}
  />
  <Handle
    className="slider__handle slider__handle-2"
    disabled={false}
    max={100}
    min={0}
    offset={100}
    value={100}
  />
</div>
`;

exports[`RangeSlider should match snapshot when disabled 1`] = `
.c0 {
  position: relative;
  width: 100%;
  touch-action: none;
  box-sizing: border-box;
  height: calc(23px + 1px);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0.disabled {
  opacity: 0.4;
}

.c1 {
  position: absolute;
  width: 100%;
  background-color: #ebebeb;
  height: 4px;
}

<div
  className="c0 slider slider--disabled disabled"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onTouchStart={[Function]}
>
  <div
    className="c1 slider__rail"
  />
  <Track
    className="slider__track"
    disabled={true}
    length={100}
    offset={0}
  />
  <Handle
    className="slider__handle slider__handle-1 slider__handle--disabled"
    disabled={true}
    max={100}
    min={0}
    offset={0}
    value={0}
  />
  <Handle
    className="slider__handle slider__handle-2 slider__handle--disabled"
    disabled={true}
    max={100}
    min={0}
    offset={100}
    value={100}
  />
</div>
`;

exports[`RangeSlider should match snapshot when min and max are matching 1`] = `
.c0 {
  position: relative;
  width: 100%;
  touch-action: none;
  box-sizing: border-box;
  height: calc(23px + 1px);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0.disabled {
  opacity: 0.4;
}

.c1 {
  position: absolute;
  width: 100%;
  background-color: #ebebeb;
  height: 4px;
}

<div
  className="c0 slider"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onTouchStart={[Function]}
>
  <div
    className="c1 slider__rail"
  />
  <Track
    className="slider__track"
    disabled={false}
    length={NaN}
    offset={NaN}
  />
  <Handle
    className="slider__handle slider__handle-1"
    disabled={false}
    max={0}
    min={0}
    offset={NaN}
    value={0}
  />
  <Handle
    className="slider__handle slider__handle-2"
    disabled={false}
    max={0}
    min={0}
    offset={NaN}
    value={0}
  />
</div>
`;

exports[`RangeSlider should match snapshot when single 1`] = `
.c0 {
  position: relative;
  width: 100%;
  touch-action: none;
  box-sizing: border-box;
  height: calc(23px + 1px);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0.disabled {
  opacity: 0.4;
}

.c1 {
  position: absolute;
  width: 100%;
  background-color: #ebebeb;
  height: 4px;
}

<div
  className="c0 slider"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onTouchStart={[Function]}
>
  <div
    className="c1 slider__rail"
  />
  <Track
    className="slider__track"
    disabled={false}
    length={100}
    offset={0}
  />
  <Handle
    className="slider__handle slider__handle-2"
    disabled={false}
    max={100}
    min={0}
    offset={100}
    value={100}
  />
</div>
`;
